[package]
name = "derive_create"
version = "0.1.0-alpha.0"
authors = ["Koenichiwa <koenvwel@gmail.com>"]
edition = "2018"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["derive", "extra-traits"]}
proc-macro2 = "1.0"
itertools = "0.10.0"